=== 0.4 ===
2011-07-15  Aki Sasaki  <aki@mozilla.com>
* mozharness/scripts/mozmill_updates.py:
    Added file.

* mozharness/base/config.py (_create_config_parser):
    Set default work_dir to 'build' instead of 'work_dir'

2011-07-12  Aki Sasaki  <aki@mozilla.com>
* mozharness/base/config.py (parse_config_file):
    Explicitly close fh when using .json config files

* mozharness/base/vcs/mercurial.py (MercurialMixin): removed

* mozharness/base/vcs/mercurial.py (MercurialScript): removed

* mozharness/base/vcs/vcsbase.py (VCSMixin):
    Created to use MercurialVCS (or any other VCS object).
    
* mozharness/base/vcs/vcsbase.py (VCSScript):
    Quick'n'dirty wrapper around VCSScript + BaseScript.

* mozharness/base/vcs/vcsbase.py (MercurialScript):
    Quick'n'dirty wrapper around VCSScript, with self.default_vcs = 'hg'

* mozharness/l10n/multi_locale_build.py (MultiLocaleBuild):
    s,scm_checkout_repos,vcs_checkout_repos.
    Pointed to the new vcsbase.MercurialScript

* scripts/signdebs.py (MaemoDebSigner.create_repos):
    s,scm_checkout_repos,vcs_checkout_repos.
    Pointed to the new vcsbase.MercurialScript

* configs/multi_locale/*:
    s,dir_name,dest,g

* configs/deb_repos/*:
    s,dir_name,dest,g

* test/networked/test_base_vcs_vcsbase.py renamed from test_base_vcs_mercurial.py
    Run a vcs_checkout.  Clobber no longer applies, though I may want to re-add.

2011-05-03  Aki Sasaki  <aki@mozilla.com>

* mozharness/base/vcs/mercurial.py (MercurialVCS.push):
    If hg_ver < 1.6.0, don't use --new-branch. (for windows, since mozilla-build appears to have hg 1.5.4. we need to decide whether we want some sort of exception or fatal here? i'll let script writers decide that.)

* mozharness/base/script.py (ShellMixin.get_output_from_command):
    Explicitly closed tmp_stdout, tmp_stderr, fh filehandles for windows.

* test/test_base_vcs_mercurial.py (*):
    Altered to pass some tests on windows.
    TestMakeAbsolute.* disabled on windows.