@@ -497,7 +497,7 @@ class BaseScript(ShellMixin, OSMixin, LogMixin, object):
         c = self.config
         dirs = {}
         dirs['abs_work_dir'] = os.path.join(c['base_work_dir'], c['work_dir'])
-        dirs['abs_upload_dir'] = os.path.join(c['base_work_dir'], 'upload_dir')
+        dirs['abs_upload_dir'] = os.path.join(dirs['abs_work_dir'], 'upload')
         if c.get('log_dir', None):
             dirs['abs_log_dir'] = os.path.join(c['base_work_dir'], c['log_dir'])
         else:
