@@ -54,7 +54,7 @@ export PYTHONPATH=`env pwd`:$PYTHONPATH
 echo "### Running pylint"
 pylint -E -e F -f parseable $MOZHARNESS_PY_FILES $SCRIPTS_PY_FILES 2>&1 | egrep -v '(No config file found, using default configuration|Instance of .SplitResult. has no .path. member)'
 
-rm -rf upload_dir
+rm -rf build
 if [ $OS_TYPE != 'windows' ] ; then
 echo "### Testing non-networked unit tests"
 coverage run -a --branch $COVERAGE_ARGS $NOSETESTS test/test_*.py
@@ -83,4 +83,4 @@ else
   echo "### Running nosetests..."
   nosetests
 fi
-rm -rf upload_dir
+rm -rf build
