@@ -6,6 +6,9 @@
 * mozharness/base/config.py (_create_config_parser):
     Set default work_dir to 'build' instead of 'work_dir'
 
+* mozharness/base/script.py (query_abs_dirs):
+    Set default upload_dir to 'build/upload' instead of 'upload_dir'
+
 2011-07-12  Aki Sasaki  <aki@mozilla.com>
 * mozharness/base/config.py (parse_config_file):
     Explicitly close fh when using .json config files
